# k-espanded

./: .gitignore  CLAUDE.md  DIAGNOSTICS_README.md  LICENSE  PHASE_3_COMPLETION.md  PHASE_3_DEVELOPER_GUIDE.md  PHASE_3_SUMMARY.md  QUICK_START_WINDOWS.md  README.md  WINDOWS11_DEBUG_SUMMARY.md  WINDOWS_FIXES.md  debug_startup.py  pyproject.toml  run.py  test_hotkeys.py  test_minimal_ui.py  test_no_impeller.py  test_qt_sidebar.py  test_software_render.py  whats-next.md
.github/: QUICK_START.md
prompts/completed/: 001-debug-windows-hotkey-issues.md  001-pyside6-setup-and-theme.md  002-pyside6-main-window-layout.md  003-pyside6-sidebar-content.md  004-pyside6-content-panels.md  005-pyside6-system-integration.md  006-pyside6-cleanup-finalize.md
src/: whats-next.md
src/espanded/: __init__.py  app.py  main.py  quick_add_standalone.py
src/espanded/core/: __init__.py  app_state.py  database.py  entry_manager.py  espanso.py  espanso_config.py  models.py  yaml_handler.py
src/espanded/hotkeys/: __init__.py  clipboard.py  cursor_position.py  keystroke_buffer.py  listener.py  text_inserter.py
src/espanded/services/: __init__.py  autocomplete_service.py  hotkey_service.py
src/espanded/sync/: __init__.py  conflict_resolver.py  github_sync.py  sync_manager.py
src/espanded/tray/: __init__.py  tray.py
src/espanded/ui/: __init__.py  dashboard.py  entry_editor.py  first_run_wizard.py  fonts.py  github_wizard.py  history_view.py  icon.py  main_window.py  quick_add.py  settings_view.py  sidebar.py  suggestion_popup.py  system_tray.py  tag_colors.py  theme.py  trash_view.py
src/espanded/ui/components/: __init__.py  autocomplete.py  entry_item.py  hotkey_recorder.py  message_dialog.py  search_bar.py  status_bar.py  tag_color_dialog.py  title_bar.py  view_tabs.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_conflict_resolver.py  test_entry_manager.py  test_github_sync.py  test_models.py
